# shelly-multiplexer

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.example.toml  repository.yaml
.github/workflows/: build-addon.yml  release-native.yml
addon/: Dockerfile  README.md  build.yaml  config.yaml  run.sh
addon/translations/: en.yaml
docs/: INSTALL-LINUX.md  INSTALL-WINDOWS.md  architecture.md
packaging/: shelly-multiplexer.service
scripts/: install.sh  uninstall.sh
sim/: calibration_tool_sim.py  nudge_strategy_sim.py  plug_based_sim.py
src/: config.rs  dispatcher.rs  ha.rs  http_admin.rs  http_shelly.rs  lib.rs  main.rs  marstek.rs  mdns.rs  modbus.rs  modbus_decode.rs  modbus_server.rs  phase_detect.rs  plug.rs  real_shelly.rs  rpc.rs  state.rs  stuck_detect.rs  virtual_shelly.rs
src/web_ui/: app.js  index.html  style.css
