[package]
name = "shelly-multiplexer"
version = "0.11.7"
edition = "2024"
rust-version = "1.87"
description = "Modbus-TCP dispatcher steering multiple Marstek Venus batteries with per-battery Shelly Plug PM Gen3 feedback; exposes a Modbus-TCP cache server so HA integrations keep working while we own the Marstek's only Modbus slot"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
arc-swap = "1.7"
hostname = "0.4"
mac_address = "1.1"
rust-embed = "8"
mime_guess = "2"
mdns-sd = { version = "0.13", default-features = false, features = ["async"] }
local-ip-address = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
scopeguard = "1.2"
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp", "tcp-server"] }
sunrise = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
